--- a/templates/learn/div2.html
+++ b/templates/learn/div2.html
@@ -1,96 +1,66 @@
 {% extends 'bootstrap_base.html' %}
 {% block body %}
-<div class="container-fluid">
-	<div class="row-fluid">
-		<div class="span12">
-			<div class="navbar">
-				<div class="navbar-inner">
-					<div class="container-fluid">
-						 <a data-target=".navbar-responsive-collapse" data-toggle="collapse" class="btn btn-navbar"><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></a> <a href="#" class="brand">网站名</a>
-						<div class="nav-collapse collapse navbar-responsive-collapse">
-							<ul class="nav">
-								<li class="active">
-									<a href="#">主页</a>
-								</li>
-								<li>
-									<a href="#">链接</a>
-								</li>
-								<li>
-									<a href="#">链接</a>
-								</li>
-								<li class="dropdown">
-									 <a data-toggle="dropdown" class="dropdown-toggle" href="#">下拉菜单<strong class="caret"></strong></a>
-									<ul class="dropdown-menu">
-										<li>
-											<a href="#">下拉导航1</a>
-										</li>
-										<li>
-											<a href="#">下拉导航2</a>
-										</li>
-										<li>
-											<a href="#">其他</a>
-										</li>
-										<li class="divider">
-										</li>
-										<li class="nav-header">
-											标签
-										</li>
-										<li>
-											<a href="#">链接1</a>
-										</li>
-										<li>
-											<a href="#">链接2</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-							<ul class="nav pull-right">
-								<li>
-									<a href="#">右边链接</a>
-								</li>
-								<li class="divider-vertical">
-								</li>
-								<li class="dropdown">
-									 <a data-toggle="dropdown" class="dropdown-toggle" href="#">下拉菜单<strong class="caret"></strong></a>
-									<ul class="dropdown-menu">
-										<li>
-											<a href="#">下拉导航1</a>
-										</li>
-										<li>
-											<a href="#">下拉导航2</a>
-										</li>
-										<li>
-											<a href="#">其他</a>
-										</li>
-										<li class="divider">
-										</li>
-										<li>
-											<a href="#">链接3</a>
-										</li>
-									</ul>
-								</li>
-							</ul>
-						</div>
+    <div class="container" style="margin-top: 30px">
+        <div class="row">
+            <form action="" class="form-inline">
+                <table class="table">
+                    <tr>
+                        <td>
+                            <div class="form-group">
+                                <lable class="col-md-4 control-label">接口名</lable>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control">
+                                </div>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                <lable class="control-label">线程数</lable>
+                                <input type="text" class="form-control">
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                <lable class="control-label">执行时长</lable>
+                                <input type="text" class="form-control">
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="form-group">
+                                <lable class="control-label">主机名</lable>
+                                <input type="text" class="form-control">
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                <lable class="control-label">端口</lable>
+                                <input type="text" class="form-control">
+                            </div>
+                        </td>
+                        <td>
+                            <div class="form-group">
+                                <lable class="control-label">方法</lable>
+                                <input type="text" class="form-control">
+                            </div>
+                        </td>
 
-					</div>
-				</div>
+                    </tr>
+                </table>
+            </form>
+        </div>
+    <p id="show_p">{ "name": "Brett", "address":"北京路23号", "email": "123456@qq.com" }</p>
+<pre id="out_pre"></pre>
 
-			</div>
-			<form class="form-search form-inline">
-				<input class="input-medium search-query" type="text" /> <button type="submit" class="btn">查找</button>
-			</form>
-		</div>
-	</div>
-	<div class="row-fluid">
-		<div class="span2" style="background-color: gray;">
-                span2
-		</div>
-		<div class="span4" style="background-color: red;">
-            span4
-		</div>
-		<div class="span6" style="background-color: black;">
-            span6
-		</div>
-	</div>
-</div>
+    </div>
+    <script type="text/javascript">
+
+　 var text = document.getElementById('show_p').innerText; //获取json格式内容
+
+   var result = JSON.stringify(JSON.parse(text), null, 2);//将字符串转换成json对象
+
+   document.getElementById('out_pre').innerText= result ;
+　
+</script>
 {% endblock %}
