--- a/templates/daily_work.html
+++ b/templates/daily_work.html
@@ -47,7 +47,7 @@
         }
     </style>
     <br>
-    <div id="loading" class="loading">数据加载中...</div>
+{#    <div id="loading" class="loading">数据加载中...</div>#}
     <h4 align="left">功能任务<a href="http://ttd.swat.ctripcorp.com:8099/#/testApplyList" target="_blank">(TDS)</a></h4>
     <table class="table table-bordered" style="text-align: left">
         <tr>
