--- a/templates/perf.html
+++ b/templates/perf.html
@@ -2,6 +2,14 @@
 {% load static %}
 {% block js %}
     <script src="{% static 'js/input_file.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery-3.e2.1.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap-table-zh-CN.min.js' %}"></script>
+    <script src="{% static 'js/table.js' %}"></script>
+{% endblock %}
+{% block selfcss %}
+    <link href="{% static 'css/starter-template.css' %}" rel="stylesheet"/>
+    <link href="{% static 'css/bootstrap-table.min.css' %}" rel="stylesheet"/>
 {% endblock %}
 {% block mytitle %} 性能测试 {% endblock %}
 
@@ -88,49 +96,80 @@
 
 
     <div class="col-md-6">
-        <table class="table table-hover table-bordered">
-            <thead>
-            <tr>
-                <th hidden="hidden">序号</th>
-                <th>应用和接口</th>
-                <th>响应时间</th>
-                <th>TPS</th>
-                <th>成功率</th>
-                <th>测试时间</th>
-            </tr>
-            </thead>
-            <tbody id="J_template">
-            {% if categories.length == 0 %}
-                <tr>
-                    <td style="text-align: center;"> 无查询结果</td>
-                </tr>
-            {% else %}
-                {% for each in categrorie.itmes %}
-                <c:forEach var="category" items="${categories}">
-                    <tr id="item">
-                        <td hidden="hidden">${category.id}</td>
-                        <td>${category.name}</td>
-                        <td>${category.mnemonicCode}</td>
-                        <td>
-                            <div class="visible-md visible-lg hidden-sm hidden-xs action-buttons">
-                                <a id="editLink" class="blue"
-                                   onclick="editCategory(${category.id},'${category.name}','${category.mnemonicCode}')"
-                                   data-toggle="modal"
-                                   data-target="#editModel"
-                                   title="编辑" style="cursor:pointer;">[编辑]</a>
-                                <a id="delLink" class="blue"
-                                   onclick="delCategory(${category.id})" data-toggle="modal"
-                                   data-target="#tipModel"
-                                   title="删除" style="cursor:pointer;">[删除]</a>
-                            </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-            {% endif %}
-            </tbody>
+        <div id="toolbar">
+            <button id="remove" class="btn btn-danger" disabled>
+                <i class="fa fa-remove"></i> Delete
+            </button>
+        </div>
+        <table id="table"
+               data-toolbar="#toolbar"
+               data-search="true"
+               data-show-refresh="true"
+               data-show-toggle="true"
+               data-show-columns="true"
+               data-show-export="true"
+               data-detail-view="true"
+               data-detail-formatter="detailFormatter"
+               data-minimum-count-columns="2"
+               data-show-pagination-switch="true"
+               data-pagination="true"
+               data-id-field="id"
+               data-page-list="[10, 25, 50, 100, ALL]"
+               data-side-pagination="server"
+{#               data-url="http://issues.wenzhixin.net.cn/examples/bootstrap_table/data"#}
+               data-url="{% url 'get_perf_result' %}"
+               data-response-handler="responseHandler">
         </table>
-
     </div>
+
+    {#    <div class="col-md-6">#}
+    {#        <table class="table table-bordered" table-toggle="table">#}
+    {#            <thead style="background-color: darkslategray;">#}
+    {#            <tr style="color: white">#}
+    {#                <th hidden="hidden">序号</th>#}
+    {#                <th>应用和接口</th>#}
+    {#                <th>响应时间</th>#}
+    {#                <th>TPS</th>#}
+    {#                <th>成功率</th>#}
+    {#                <th>测试时间</th>#}
+    {#                <th>操作</th>#}
+    {#            </tr>#}
+    {#            </thead>#}
+    {#            <tbody id="J_template">#}
+    {#            {% if result.length == 0 %}#}
+    {#                <tr>#}
+    {#                    <td style="text-align: center;"> 无查询结果</td>#}
+    {#                </tr>#}
+    {#            {% else %}#}
+    {#                {% for perf in result %}#}
+    {#                <c:forEach var="category" items="${categories}">#}
+    {#                    <tr id="item">#}
+    {#                        <td hidden="hidden">{{ perf.id }}</td>#}
+    {#                        <td>{{ perf.appid }}:{{ perf.name }}</td>#}
+    {#                        <td>{{ perf.response }}</td>#}
+    {#                        <td>{{ perf.tps }}</td>#}
+    {#                        <td>{{ perf.success_percent }}</td>#}
+    {#                        <td>{{ perf.exec_time|date:"Y-m-d H:i:s" }}</td>#}
+    {#                        <td>#}
+    {#                            <div class="visible-md visible-lg hidden-sm hidden-xs action-buttons">#}
+    {#                                <a id="editLink" class="blue"#}
+    {#                                   onclick="editCategory({{ perf.id }},{{ perf.name }},{{ perf.appid }})"#}
+    {#                                   data-toggle="modal"#}
+    {#                                   data-target="#editModel"#}
+    {#                                   title="编辑" style="cursor:pointer;">[编辑]</a>#}
+    {#                                <a id="delLink" class="blue"#}
+    {#                                   onclick="delCategory({{ perf.id }})" data-toggle="modal"#}
+    {#                                   data-target="#tipModel"#}
+    {#                                   title="删除" style="cursor:pointer;">[删除]</a>#}
+    {#                            </div>#}
+    {#                        </td>#}
+    {#                    </tr>#}
+    {#                {% endfor %}#}
+    {#            {% endif %}#}
+    {#            </tbody>#}
+    {#        </table>#}
+    {##}
+    {#    </div>#}
 
 
 {% endblock %}
