--- a/templates/perf.html
+++ b/templates/perf.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block js %}
     <script src="{% static 'js/input_file.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/jquery-3.e2.1.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-table-zh-CN.min.js' %}"></script>
-    <script src="{% static 'js/table.js' %}"></script>
+
 {% endblock %}
 {% block selfcss %}
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet"/>
@@ -96,32 +96,40 @@
 
 
     <div class="col-md-6">
-        <div id="toolbar">
-            <button id="remove" class="btn btn-danger" disabled>
-                <i class="fa fa-remove"></i> Delete
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                查询条件
+            </div>
+            <div class="panel-body form-group" style="margin-bottom:0;">
+                <label class="col-sm-2 control-label" style="padding: 5px;text-align: right; margin-top:5px">姓名：</label>
+                <div class="col-sm-2" style="padding: 0">
+                    <input type="text" class="form-control" name="Name" id="search_name"/>
+                </div>
+                <label class="col-sm-2 control-label" style="padding: 5px;text-align: right; margin-top:5px">手机号：</label>
+                <div class="col-sm-2" style="padding: 0">
+                    <input type="text" class="form-control" name="Name" id="search_tel"/>
+                </div>
+                <div class="col-sm-1 col-sm-offset-2">
+                    <button class="btn btn-primary" id="search_btn">查询</button>
+                </div>
+            </div>
+        </div>
+        {% csrf_token %}
+        <table id="mytab" class="table table-hover"></table>
+
+        <div id="toolbar" class="btn-group pull-right" style="margin-right: 20px;">
+            <button id="btn_edit" type="button" class="btn btn-default" style="display: none; border-radius: 0">
+                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
+            </button>
+            <button id="btn_delete" type="button" class="btn btn-default" style="display: none;">
+                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
+            </button>
+            <button id="btn_add" type="button" class="btn btn-default">
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>新增
             </button>
         </div>
-        <table id="table"
-               data-toolbar="#toolbar"
-               data-search="true"
-               data-show-refresh="true"
-               data-show-toggle="true"
-               data-show-columns="true"
-               data-show-export="true"
-               data-detail-view="true"
-               data-detail-formatter="detailFormatter"
-               data-minimum-count-columns="2"
-               data-show-pagination-switch="true"
-               data-pagination="true"
-               data-id-field="id"
-               data-page-list="[10, 25, 50, 100, ALL]"
-               data-side-pagination="server"
-{#               data-url="http://issues.wenzhixin.net.cn/examples/bootstrap_table/data"#}
-               data-url="{% url 'get_perf_result' %}"
-               data-response-handler="responseHandler">
-        </table>
     </div>
-
+    <script src="{% static 'js/table_2.js' %}"></script>
     {#    <div class="col-md-6">#}
     {#        <table class="table table-bordered" table-toggle="table">#}
     {#            <thead style="background-color: darkslategray;">#}
