--- a/templates/perf.html
+++ b/templates/perf.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% block js %}
     <script src="{% static 'js/input_file.js' %}" type="text/javascript"></script>
-    <script src="{% static 'js/jquery-3.e2.1.min.js' %}" type="text/javascript"></script>
+    <script src="{% static 'js/jquery-3.2.1.min.js' %}" type="text/javascript"></script>
     <script src="{% static 'js/bootstrap-table.min.js' %}"></script>
     <script src="{% static 'js/bootstrap-table-zh-CN.min.js' %}"></script>
-    <script src="{% static 'js/table.js' %}"></script>
+
 {% endblock %}
 {% block selfcss %}
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet"/>
@@ -121,7 +121,7 @@
                data-response-handler="responseHandler">
         </table>
     </div>
-
+   <script src="{% static 'js/table.js' %}"></script>
     {#    <div class="col-md-6">#}
     {#        <table class="table table-bordered" table-toggle="table">#}
     {#            <thead style="background-color: darkslategray;">#}
