--- a/templates/bootstrap_base.html
+++ b/templates/bootstrap_base.html
@@ -10,7 +10,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="{% static '/img/despicable.ico' %}">
+    <link rel="icon" href="{% static '/img/agnes.ico' %}">
     <title>{% block mytitle %}Starter Template for Bootstrap{% endblock %}</title>
     <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
@@ -18,11 +18,8 @@
 {% block selfcss %}
     <link href="{% static 'css/starter-template.css' %}" rel="stylesheet"/>
 {% endblock %}
-{#    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">#}
      <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
-{#      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>#}
-{#      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>#}
-    <!--[endif]-->
+
 </head>
 
 <body>
@@ -75,7 +72,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 {#<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>#}
-{#<script>window.jQuery || document.write('<script src="{% static 'js/jquery-1.10.2.min.js' %}"><\/script>')</script>#}
+<script>window.jQuery || document.write('<script src="{% static 'js/jquery-1.10.2.min.js' %}"><\/script>')</script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 {#<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->#}
 <script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
