--- a/templates/perf.html
+++ b/templates/perf.html
@@ -101,15 +101,19 @@
                 查询条件
             </div>
             <div class="panel-body form-group" style="margin-bottom:0;">
-                <label class="col-sm-2 control-label" style="padding: 5px;text-align: right; margin-top:5px">姓名：</label>
-                <div class="col-sm-2" style="padding: 0">
+                <label class="col-xs-1 control-label" style="padding: 0px;text-align: right; margin-top:5px">应用：</label>
+                <div class="col-xs-2" style="padding: 0">
                     <input type="text" class="form-control" name="Name" id="search_name"/>
                 </div>
-                <label class="col-sm-2 control-label" style="padding: 5px;text-align: right; margin-top:5px">手机号：</label>
-                <div class="col-sm-2" style="padding: 0">
+                <label class="col-xs-1 control-label" style="padding: 2px;text-align: right; margin-top:5px">接口：</label>
+                <div class="col-xs-2" style="padding: 0">
                     <input type="text" class="form-control" name="Name" id="search_tel"/>
                 </div>
-                <div class="col-sm-1 col-sm-offset-2">
+                <label class="col-xs-2 control-label" style="padding: 2px;text-align: right; margin-top:5px">执行时间：</label>
+                <div class="col-xs-2" style="padding: 0">
+                    <input type="text" class="form-control" name="Name" id="search_tel"/>
+                </div>
+                <div class="col-xs-1">
                     <button class="btn btn-primary" id="search_btn">查询</button>
                 </div>
             </div>
@@ -118,10 +122,10 @@
         <table id="mytab" class="table table-hover"></table>
 
         <div id="toolbar" class="btn-group pull-right" style="margin-right: 20px;">
-            <button id="btn_edit" type="button" class="btn btn-default" style="display: none; border-radius: 0">
+            <button id="btn_edit" type="button" class="btn btn-default" style="display: none;border-radius: 0">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>修改
             </button>
-            <button id="btn_delete" type="button" class="btn btn-default" style="display: none;">
+            <button id="btn_delete" type="button" class="btn btn-default" style="display: none">
                 <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>删除
             </button>
             <button id="btn_add" type="button" class="btn btn-default">
@@ -130,56 +134,6 @@
         </div>
     </div>
 
-    <script src="{% static 'js/table_2.js' %}"></script>
-
-    {#    <div class="col-md-6">#}
-    {#        <table class="table table-bordered" table-toggle="table">#}
-    {#            <thead style="background-color: darkslategray;">#}
-    {#            <tr style="color: white">#}
-    {#                <th hidden="hidden">序号</th>#}
-    {#                <th>应用和接口</th>#}
-    {#                <th>响应时间</th>#}
-    {#                <th>TPS</th>#}
-    {#                <th>成功率</th>#}
-    {#                <th>测试时间</th>#}
-    {#                <th>操作</th>#}
-    {#            </tr>#}
-    {#            </thead>#}
-    {#            <tbody id="J_template">#}
-    {#            {% if result.length == 0 %}#}
-    {#                <tr>#}
-    {#                    <td style="text-align: center;"> 无查询结果</td>#}
-    {#                </tr>#}
-    {#            {% else %}#}
-    {#                {% for perf in result %}#}
-    {#                <c:forEach var="category" items="${categories}">#}
-    {#                    <tr id="item">#}
-    {#                        <td hidden="hidden">{{ perf.id }}</td>#}
-    {#                        <td>{{ perf.appid }}:{{ perf.name }}</td>#}
-    {#                        <td>{{ perf.response }}</td>#}
-    {#                        <td>{{ perf.tps }}</td>#}
-    {#                        <td>{{ perf.success_percent }}</td>#}
-    {#                        <td>{{ perf.exec_time|date:"Y-m-d H:i:s" }}</td>#}
-    {#                        <td>#}
-    {#                            <div class="visible-md visible-lg hidden-sm hidden-xs action-buttons">#}
-    {#                                <a id="editLink" class="blue"#}
-    {#                                   onclick="editCategory({{ perf.id }},{{ perf.name }},{{ perf.appid }})"#}
-    {#                                   data-toggle="modal"#}
-    {#                                   data-target="#editModel"#}
-    {#                                   title="编辑" style="cursor:pointer;">[编辑]</a>#}
-    {#                                <a id="delLink" class="blue"#}
-    {#                                   onclick="delCategory({{ perf.id }})" data-toggle="modal"#}
-    {#                                   data-target="#tipModel"#}
-    {#                                   title="删除" style="cursor:pointer;">[删除]</a>#}
-    {#                            </div>#}
-    {#                        </td>#}
-    {#                    </tr>#}
-    {#                {% endfor %}#}
-    {#            {% endif %}#}
-    {#            </tbody>#}
-    {#        </table>#}
-    {##}
-    {#    </div>#}
-
+    <script src="{% static 'js/table.js' %}"></script>
 
 {% endblock %}
