--- a/templates/bootstrap_base.html
+++ b/templates/bootstrap_base.html
@@ -2,70 +2,86 @@
 <html lang="en">
 <head>
     {% load static %}
-{% block js %}
-{% endblock %}
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="{% static '/img/agnes.ico' %}">
+
     <title>{% block mytitle %}Starter Template for Bootstrap{% endblock %}</title>
-    <!-- Bootstrap core CSS -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'css/ie10-viewport-bug-workaround.css' %}" rel="stylesheet"/>
-{% block selfcss %}
-    <link href="{% static 'css/starter-template.css' %}" rel="stylesheet"/>
-{% endblock %}
-     <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
+    <script src="{% static 'js/ie-emulation-modes-warning.js' %}"></script>
+
+    {% block selfcss %}
+        <link href="{% static 'css/starter-template.css' %}" rel="stylesheet"/>
+    {% endblock %}
+    {% block js %}
+    {% endblock %}
+
 
 </head>
 
 <body>
 {#  导航栏#}
 {% block bar %}
-<nav class="navbar navbar-default navbar-fixed-top" >
-    <div class="container-fluid ">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
-                    aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="{% url 'home' %}" style="font-size: x-large">Cover</a>
+    <nav class="navbar navbar-default navbar-fixed-top" style="background: darkslategray">
+        <div class="container-fluid ">
+            <div class="navbar-header logo">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+                        aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{% url 'home' %}" style="font-size: x-large;color: white">Cover</a>
+            </div>
+            <div id="navbar" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav" style="font-size: 18px">
+                    <li><a href="{% url 'daily_task' %}" style="color: white">Daily</a></li>
+                    <li><a href="{% url 'perf' %}" style="color: white">Perf</a></li>
+                    <li><a href="#" style="color: white">tools</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right" style="font-size: 18px">
+                    <li><a href="#" style="color: white">Link</a></li>
+                    <li class="dropdown" >
+                        <a href="#" style="color: white" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">Tools <span class="caret"></span></a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'json_tool' %}">json_tool</a></li>
+                            <li><a href="#">Another action</a></li>
+                            <li><a href="#">Something else here</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="#">Separated link</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div><!--/.nav-collapse -->
         </div>
-        <div id="navbar" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav" style="font-size: 18px">
-                <li class="active"><a href="{% url 'daily_task' %}">Daily</a></li>
-                <li><a href="{% url 'perf' %}">Perf</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div><!--/.nav-collapse -->
-    </div>
-</nav>
+    </nav>
 {% endblock %}
 
 {% block body %}
-<div class="container-fluid">
+    <div class="container-fluid">
 
-    <div class="starter-template">
-        {% block bodycontent %}
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text
-                and a mostly barebones HTML document.</p>
-        {% endblock %}
-    </div>
-</div><!-- /.container -->
+        <div class="starter-template">
+            {% block bodycontent %}
+                <h1>Bootstrap starter template</h1>
+                <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this
+                    text
+                    and a mostly barebones HTML document.</p>
+            {% endblock %}
+        </div>
+    </div><!-- /.container -->
 {% endblock %}
 {% block footer %}
-<footer class="footer">
-    <div class="container">
-        <p class="text-muted">版权 © HelloTester.com.</p>
-    </div>
-</footer>
+    <footer class="footer">
+        <div class="container">
+            <p class="text-muted">版权 © HelloTester.com.</p>
+        </div>
+    </footer>
 {% endblock %}
 
 <!-- Bootstrap core JavaScript
