--- a/templates/perf.html
+++ b/templates/perf.html
@@ -38,7 +38,7 @@
 
                 <!-- COMPONENT END -->
                 <div class="form-group col-sm-8 col-sm-offset-2">
-                    <button type="submit" class="btn btn-primary pull-right" disabled>Submit</button>
+                    <button type="submit" class="btn btn-primary pull-right">Submit</button>
                     <button type="reset" class="btn btn-danger pull-left">Reset</button>
                 </div>
 
@@ -72,20 +72,10 @@
                         </div>
                     {% endif %}
                 {% endfor %}
-                <div class="form-group">
-                    <div class="col-sm-12">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox"> Remember me
-                            </label>
-                        </div>
-                    </div>
-                </div>
-
 
                 <div class="form-group">
                     <div class="col-sm-12">
-                        <button type="submit" class="btn btn-default">Sign in</button>
+                        <button type="submit" class="btn btn-success btn-lg">执行</button>
                     </div>
                 </div>
             </form>
