--- a/templates/home.html
+++ b/templates/home.html
@@ -33,6 +33,7 @@
               <a href="{% url 'perf' %}" class="btn btn-lg btn-default">Perf Go</a>
               <a href="{% url 'daily_task' %}" class="btn btn-lg btn-default">Daily Go</a>
               <a href="{% url 'notice' %}" class="btn btn-lg btn-default">Notice Go</a>
+              <a href="{% url 'notice' %}" class="btn btn-lg btn-default">Monitor</a>
             </p>
           </div>
 
