--- a/templates/daily_work.html
+++ b/templates/daily_work.html
@@ -3,8 +3,8 @@
 {% load diy_tag %}
 {% block mytitle %}Daily{% endblock %}
 {% block js %}
-    <script src="{% static 'js/notify.js' %}" type="text/javascript"></script>
-    <script type="text/javascript">
+    <script src="{% static 'js/notify.js' %}"></script>
+    <script>
         function inputvalue() {
             var env = 'FAT';
             var appid = document.getElementById("appidinput").value;
