--- a/templates/bootstrap_base.html
+++ b/templates/bootstrap_base.html
@@ -45,8 +45,8 @@
                 <ul class="nav navbar-nav navbar-right" style="font-size: 18px">
                     <li><a href="#" style="color: white">Link</a></li>
                     <li class="dropdown" >
-                        <a href="#" style="color: white" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                           aria-expanded="false">Tools <span class="caret"></span></a>
+                        <a href="#" style="color: white" class="dropdown-toggle" data-toggle="dropdown" role="button1" aria-haspopup="true"
+                           aria-expanded="false">Tools<span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="{% url 'json_tool' %}">json_tool</a></li>
                             <li><a href="#">Another action</a></li>
@@ -89,6 +89,6 @@
 <script>window.jQuery || document.write('<script src="{% static 'js/jquery-1.10.2.min.js' %}"><\/script>')</script>
 <script src="{% static 'js/bootstrap.min.js' %}"></script>
 {#<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->#}
-<script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>
+{#<script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>#}
 </body>
 </html>
